# aws-athena

./: .gitignore  README.md  athena.toml.example  pyproject.toml
athena_toolkit/: __init__.py  cli.py  client.py  config.py  convert.py  core.py  cost.py  formatting.py  preflight.py  projection.py  schema.py
tests/: test_config.py  test_convert.py  test_core.py  test_cost.py  test_formatting.py  test_preflight.py  test_projection.py  test_schema.py
