[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "athena-toolkit"
version = "0.1.0"
description = "A boto3-based CLI toolkit for exploring and operating AWS Athena across multiple environments."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "boto3>=1.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
athena-toolkit = "athena_toolkit.cli:main"
athq = "athena_toolkit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["athena_toolkit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
